k8s/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "active-standby"
webhooks:
  - name: "active-standby"
    clientConfig:
      url: "https://lc.com:80/active-standby"
      caBundle: "Ci0tLS0tQkVHSU4gQ0VSVElGSUNBVEUtLS0tLQpNSUlFb1RDQ0Fva0NBUUV3RFFZSktvWklodmNOQVFFTEJRQXdIREVhTUJnR0ExVUVBd3dSVFhrZ1EyVnlkQ0JCCmRYUm9iM0pwZEhrd0hoY05NakF3T1RFeE1UVTBOakV4V2hjTk16QXdPVEE1TVRVME5qRXhXakFSTVE4d0RRWUQKVlFRRERBWnNZeTVqYjIwd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUNEd0F3Z2dJS0FvSUNBUURBaEI3OQpjLyszemRjaGpjaEcwQ0ZHdjNYQldvK1JXM2tXVXdWRVV3cmVCR25jbGFhMWc4MFNOQkJ5dEhGeHQ5M05pelNnCjlWUFNWSXNQcmYyNDFKZ3N6MmZUTlBtaSt6M2xuQUNydUVjaTF4dUxuZGxqUjkwWG1QK3JPM3J0aVpjSnVuQjgKbkZSTzYwVkN [...]
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["*"]
        resources:   ["endpoints"]
        scope:       "Namespaced"
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    timeoutSeconds: 5
