k8s/webhook_1.15_low.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  generation: 1
  labels:
    app: es
  name: es-webhook
webhooks:
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMrakNDQWVLZ0F3SUJBZ0lKQU5adzVkTHB2WldLTUEwR0NTcUdTSWIzRFFFQkN3VUFNQlF4RWpBUUJnTlYKQkFNTUNXTmhMV3hqTG1OdmJUQWVGdzB5TVRFeE1Ea3hNakV4TVRWYUZ3MHpNVEV4TURjeE1qRXhNVFZhTUJFeApEekFOQmdOVkJBTU1CbXhqTG1OdmJUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCCkFLbkRsQ3ZQejJqM0dGbTc3MWI1bHZYOHNTSEtqTnlZWFdLQXVKaFhONDUydllnZmNQNXFNUWEwMlNDdFFCV1UKQy9KM2tLZmNUTkZNLzBzRnFhT2xuUVF0WXlhdEx5dFE1UURoYzFVSHNFYnMrWitVRzVHZS9KUmRPM2xta2dwNQpkaVRZWXNUKzRw [...]
      url: https://10.28.100.66:5678/webhook
    failurePolicy: Ignore
    name: elastic.lc.com
    namespaceSelector:
      matchLabels:
        es: "true"
    rules:
      - apiGroups:
          - core
          - extensions
          - ""
        apiVersions:
          - v1
          - v1beta1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: Unknown
